<resources>
    <string name="app_name">PhotoTransfer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo_transfer_settings">Photo Transfer Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_server">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_user_name">User</string>
    <string name="pref_default_user_name">username</string>

    <string name="pref_title_password">Password</string>
    <string name="pref_default_password">password</string>

    <string name="pref_title_root">Root</string>
    <string name="pref_default_root">//nevis/photos</string>

    <string name="pref_title_path">Path</string>
    <string name="pref_default_path">yyyy/yyyy-MM/yyyy-MM-dd</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enter_name_optional">Enter Name (optional)</string>
</resources>
